# restream

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: consts.rs  lib.rs  main.rs
src/adapter/: fireflies.rs  mod.rs  webhook.rs  websocket.rs
src/interface/: mod.rs
transcript/: client_call_acme.csv  intake_call.csv  intake_call_poor.csv  intake_call_test.csv  meeting_2024_q1.csv  standup_monday.csv  test.csv  transcript.csv
