[package]
name = "restream"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
poem-openapi = { version = "5.0", features = ["swagger-ui"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
open = "5.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
poem = { version = "3.0", features = ["websocket"] }
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
